@@ -1,0 +1,15 @@
+#ifndef gtest02_Class_Defined__
+#define gtest02_Class_Defined__
+
+#include <stdint.h>
+
+class gtest02 {
+public:
+#line 1 "gtest02.spin"
+  int32_t	run(void);
+#line 8 "gtest02.spin"
+  int32_t	fibo(int32_t x);
+private:
+};
+
+#endif
